[package]
name = "wentu_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUIDs and dates
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

# WebSocket (for Phase 2)
tokio-tungstenite = "0.21"

# Error handling
anyhow = "1"
thiserror = "1"

# Environment
config = "0.13"

[dev-dependencies]
